--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </modules>
     <packaging>pom</packaging>
 
-    <name>multy2</name>
+    <name>multy</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -53,7 +53,6 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
     <profiles>
