--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>${cobertura-maven-plugin2.version}</version>
+                <version>2.7</version>
             </plugin>
         </plugins>
     </reporting>
