dao and service on spring

--- a/dao/src/main/resources/db.properties
+++ b/dao/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-url=jdbc:mysql://localhost:3306/academy?serverTimezone=Europe/Moscow&useSSL=false&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
-user=root
-password=Sasha123
+#url=jdbc:mysql://localhost:3306/academy?serverTimezone=Europe/Moscow&useSSL=false&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
+#user=root
+#password=Sasha123
