--- a/dao/src/test/resources/db.properties
+++ b/dao/src/test/resources/db.properties
@@ -1,3 +1,3 @@
-url=jdbc:mysql://localhost:3306/academyTest?serverTimezone=Europe/Moscow&useSSL=false
-user=root
-password=Sasha123
+#url=jdbc:mysql://localhost:3306/academyTest?serverTimezone=Europe/Moscow&useSSL=false
+#user=root
+#password=Sasha123
